--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,11 +14,27 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:name=".MapzenApplication" android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".activity.BaseActivity">
+    <application android:name=".MapzenApplication"
+                 android:label="@string/application_name"
+                 android:theme="@android:style/Theme.Holo.Light">
+        <activity android:name=".activity.BaseActivity"
+                  android:label="@string/application_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".activity.SearchActivity" />
+        </activity>
+        <activity android:name=".activity.SearchActivity"
+                  android:label="@string/application_name"
+                  android:launchMode="singleTop">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
     </application>
