--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
             <id>SlidingMenu</id>
             <url>http://raw.github.com/mapzen/SlidingMenu/tree/master/mvn-repo</url>
         </repository>
+        <repository>
+            <id>Mapzen mvn-repo</id>
+            <url>http://raw.github.com/mapzen/mvn-repo/tree/master/mvn-repo</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -49,6 +53,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-android</artifactId>
             <version>1.6.1-RC1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google</groupId>
+            <artifactId>volley</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <!-- Hosted in a github fork -->
