--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.robolectric</groupId>
             <artifactId>robolectric</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
