--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <repositories>
         <repository>
             <id>Mapzen mvn-repo</id>
-            <url>http://raw.github.com/mapzen/mvn-repo/tree/master</url>
+            <url>http://localhost:8000</url>
         </repository>
     </repositories>
 
@@ -57,13 +57,14 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- Hosted in a github fork -->
-        <dependency>
-            <groupId>com.jeremyfeinstein.slidingmenu</groupId>
-            <artifactId>slidingmenu</artifactId>
-            <version>1.3-SNAPSHOT</version>
-            <type>jar</type>
-        </dependency>
+         <!-- Hosted in a github fork -->
+         <dependency>
+             <groupId>com.jeremyfeinstein.slidingmenu</groupId>
+             <artifactId>slidingmenu</artifactId>
+             <version>1.3-SNAPSHOT</version>
+             <type>jar</type>
+         </dependency>
+
     </dependencies>
 
     <build>
@@ -80,11 +81,11 @@
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <sdk>
                         <!-- platform or api level (api level 4 = platform 1.6)-->
-                        <platform>18</platform>
+                        <platform>19</platform>
                     </sdk>
                     <undeployBeforeDeploy>true</undeployBeforeDeploy>
                 </configuration>
