--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.squareup.gradle:gradle-android-test-plugin:0.9.+'
     }
 }
 
@@ -29,15 +30,14 @@ android {
 }
 
 repositories {
-     maven { url "http://localhost:8000" }
      maven { url "http://repo.maven.apache.org/maven2" }
 }
 dependencies {
     compile group: 'org.osmdroid', name: 'osmdroid-android', version:'3.0.9'
     compile group: 'org.slf4j', name: 'slf4j-android', version:'1.6.1-RC1'
-    compile group: 'com.google', name: 'volley', version:'1.0.0-SNAPSHOT'
     compile 'com.android.support:support-v4:+'
     compile fileTree(dir: 'libs', include: '*.jar')
-    instrumentTestCompile group: 'junit', name: 'junit', version:'4.8.2'
-    instrumentTestCompile group: 'org.robolectric', name: 'robolectric', version:'2.3-SNAPSHOT'
+    instrumentTestCompile 'junit:junit:4.10'
+    instrumentTestCompile 'org.robolectric:robolectric:2.1.+'
+    instrumentTestCompile 'com.squareup:fest-android:1.0.+'
 }
