--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,11 @@ android {
         minSdkVersion 16
         targetSdkVersion 18
     }
+    sourceSets {
+        main {
+            assets.srcDirs = ['assets', '../vtm/assets']
+        }
+    }
 }
 
 repositories {
@@ -34,9 +39,12 @@ repositories {
 }
 dependencies {
     compile group: 'org.osmdroid', name: 'osmdroid-android', version:'3.0.9'
-    compile group: 'org.slf4j', name: 'slf4j-android', version:'1.6.1-RC1'
+    //compile group: 'org.slf4j', name: 'slf4j-android', version:'1.6.1-RC1'
     compile 'com.android.support:support-v4:+'
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile project(':vtm-android')
+    compile project(':vtm')
+    //compile project(':vtm-ext-libs')
     instrumentTestCompile 'junit:junit:4.10'
     instrumentTestCompile 'org.robolectric:robolectric:2.1.+'
     instrumentTestCompile 'com.squareup:fest-android:1.0.+'
