--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'mapzen'
+include ':vtm'
+include ':vtm-android'
 include ':app'
+include 'vtm-android-example'
+include 'vtm-ext-libs'
 
