--- a/vtm-android/build.gradle
+++ b/vtm-android/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'android-library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:support-v4:+'
     compile project(':vtm')
 }
 
