--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.FullSearchResultsActivity"
+            android:launchMode="singleTop"
+            android:label="@string/application_name" >
+        </activity>
     </application>
 
 </manifest>
