--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,20 +9,27 @@ buildscript {
         maven {
             url 'https://oss.sonatype.org/content/repositories/snapshots/'
         }
+        maven { url 'http://download.crashlytics.com/maven' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.6.+'
         classpath 'com.squareup.gradle:gradle-android-test-plugin:0.9.1-SNAPSHOT'
         classpath 'com.github.nrudenko:gradle-android-cq-plugin:0.1+'
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+
     }
 }
 
 apply plugin: 'android'
+apply plugin: 'crashlytics'
 apply plugin: 'android-test'
 apply plugin: 'android-cq'
 
 repositories {
     mavenCentral()
+    maven { url 'http://download.crashlytics.com/maven' }
+
 }
 
 android {
@@ -46,4 +53,6 @@ dependencies {
     testCompile 'junit:junit:4.10'
     testCompile 'org.robolectric:robolectric:2.1.+'
     testCompile 'com.squareup:fest-android:1.0.+'
+    compile 'com.crashlytics.android:crashlytics:1.+'
+
 }
