--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,13 +63,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':vtm-android')
     compile project(':vtm')
-    testCompile 'junit:junit:4.10'
+    testCompile 'junit:junit:4.10', { exclude group: 'org.hamcrest' }
     testCompile 'org.robolectric:robolectric:2.3-SNAPSHOT'
     testCompile 'com.squareup:fest-android:1.0.+'
-    testLocalCompile 'junit:junit:4.10'
+    testLocalCompile 'junit:junit:4.10', { exclude group: 'org.hamcrest' }
     testLocalCompile 'org.robolectric:robolectric:2.3-SNAPSHOT'
     testLocalCompile 'com.squareup:fest-android:1.0.+'
-    instrumentTestCompile 'junit:junit:4.10'
+    instrumentTestCompile 'junit:junit:4.10', { exclude group: 'org.hamcrest' }
     instrumentTestCompile 'org.robolectric:robolectric:2.3-SNAPSHOT'
     instrumentTestCompile 'com.squareup:fest-android:1.0.+'
     compile 'com.crashlytics.android:crashlytics:1.+'
