setting an application logo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <application
         android:name="com.mapzen.MapzenApplication"
         android:label="@string/application_name"
+        android:icon="@drawable/ic_icon_03"
         android:theme="@style/Theme.Mapzen" >
         <activity
             android:name=".activity.BaseActivity"
