treat lint warning as errors and abort on failure ... keeping it clean yo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ android {
     sourceSets {
         instrumentTest.setRoot('src/test')
     }
+
+    lintOptions {
+        warningsAsErrors true
+        abortOnError true
+    }
 }
 
 repositories {
