--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ repositories {
     }
 }
 
+checkstyle {
+    ignoreFailures false
+    showViolations true
+}
+
 android {
     compileSdkVersion 19
     buildToolsVersion "19.0.0"
