--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     compile project(':vtm-android')
     compile project(':vtm')
     compile project(':geojson')
+    compile project(':volley')
     compile 'com.crashlytics.android:crashlytics:1.+'
     testCompile 'junit:junit:4.10'
     testCompile 'org.robolectric:robolectric:2.3-SNAPSHOT'
