--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'mapzen'
 include ':vtm'
 include ':vtm-android'
+include ':volley'
 include ':geojson'
 include ':app'
 include 'vtm-android-example'
