--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mapzen"
     android:versionCode="2"
-    android:versionName="1.0.0-SNAPSHOT" >
+    android:versionName="1.0.0-DEVELOPMENT" >
 
     <uses-sdk
         android:minSdkVersion="17"
