flunking builds when shit is not good

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ checkstyle {
     showViolations true
 }
 
+pmd {
+    ignoreFailures false
+}
+
 android {
     compileSdkVersion 19
     buildToolsVersion "19.0.0"
