Address formatting/checkstyle issues.
* Suppress method name check for all files in src/test/java.
* Remove fully qualified class name in MapzenTestRunner.
* Add gradle default tasks.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ apply plugin: 'crashlytics'
 apply plugin: 'android-test'
 apply plugin: 'android-cq'
 
+defaultTasks = ['clean', 'test', 'checkstyle']
+
 repositories {
     mavenCentral()
     mavenLocal()
