--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:0.7.+'
     }
+
+    defaultTasks = ['clean', 'test', 'checkstyle', 'pmd']
 }
