--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     compile 'org.oscim:vtm:0.5.9-SNAPSHOT'
     compile 'org.oscim:vtm-android:0.5.9-SNAPSHOT@aar'
     compile 'com.google.android.gms:play-services:4.0.30'
+    compile 'com.jakewharton:butterknife:4.0.1'
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':geojson')
     compile project(':volley')
