--- a/build.gradle
+++ b/build.gradle
@@ -6,5 +6,5 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.7.+'
     }
 
-    defaultTasks = ['clean', 'test', 'checkstyle', 'pmd', 'lint']
+    defaultTasks = ['clean', ':app:compileDebugNdk', 'test', 'checkstyle', 'pmd', 'lint']
 }
