--- a/app/pom.xml
+++ b/app/pom.xml
@@ -27,35 +27,42 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>android.support</groupId>
-            <artifactId>compatibility-v4</artifactId>
+            <groupId>com.android.support</groupId>
+            <artifactId>support-v4</artifactId>
             <version>19.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.google.android</groupId>
-            <artifactId>volley</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>com.google.android.gms</groupId>
+            <artifactId>google-play-services</artifactId>
+            <version>14.0.0</version>
+            <type>apklib</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.android.gms</groupId>
+            <artifactId>google-play-services</artifactId>
+            <version>14.0.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.mcxiaoke.volley</groupId>
+            <artifactId>library</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.mapzen</groupId>
             <artifactId>geojson</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.oscim</groupId>
             <artifactId>vtm</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.5.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.oscim</groupId>
             <artifactId>vtm-android</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <type>apklib</type>
-        </dependency>
-        <dependency>
-            <groupId>com.crashlytics.android</groupId>
-            <artifactId>crashlytics</artifactId>
-            <version>[1.0.2,)</version>
+            <version>0.5.9-SNAPSHOT</version>
+            <type>aar</type>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -66,28 +73,65 @@
         <dependency>
             <groupId>org.robolectric</groupId>
             <artifactId>robolectric</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jakewharton</groupId>
+            <artifactId>butterknife</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>fest-android</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.oscim</groupId>
+            <artifactId>vtm-jni</artifactId>
+            <version>0.5.9-SNAPSHOT</version>
+            <classifier>armeabi</classifier>
+            <type>so</type>
+        </dependency>
+        <dependency>
+            <groupId>org.oscim</groupId>
+            <artifactId>vtm-jni</artifactId>
+            <version>0.5.9-SNAPSHOT</version>
+            <classifier>armeabi-v7a</classifier>
+            <type>so</type>
+        </dependency>
+        <dependency>
+            <groupId>org.oscim</groupId>
+            <artifactId>vtm-jni</artifactId>
+            <version>0.5.9-SNAPSHOT</version>
+            <classifier>x86</classifier>
+            <type>so</type>
+        </dependency>
+        <dependency>
+            <groupId>com.crashlytics.android</groupId>
+            <artifactId>crashlytics</artifactId>
+            <version>[1.0.2,)</version>
         </dependency>
     </dependencies>
 
     <build>
+
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.8.2</version>
+                    <version>3.8.3-SNAPSHOT</version>
                     <extensions>true</extensions>
-                    <configuration>
-                        <androidManifestFile>
-                            ${project.basedir}/src/main/AndroidManifest.xml
-                        </androidManifestFile>
-                        <resourceDirectory>${project.basedir}/src/main/res</resourceDirectory>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
@@ -99,6 +143,7 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 
 </project>
