--- a/pom.xml
+++ b/pom.xml
@@ -26,71 +26,73 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>android</groupId>
-            <artifactId>android</artifactId>
-            <version>4.4.2_r2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.android.support</groupId>
-            <artifactId>support-v4</artifactId>
-            <version>19.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.android.gms</groupId>
-            <artifactId>google-play-services</artifactId>
-            <version>15.0.0</version>
-            <type>apklib</type>
-        </dependency>
-        <dependency>
-            <groupId>com.google.android.gms</groupId>
-            <artifactId>google-play-services</artifactId>
-            <version>15.0.0</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>com.mcxiaoke.volley</groupId>
-            <artifactId>library</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.mapzen</groupId>
-            <artifactId>geojson</artifactId>
-            <version>0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.oscim</groupId>
-            <artifactId>vtm</artifactId>
-            <version>0.5.9-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.oscim</groupId>
-            <artifactId>vtm-android</artifactId>
-            <version>0.5.9-SNAPSHOT</version>
-            <type>aar</type>
-        </dependency>
+
         <dependency>
             <groupId>org.robolectric</groupId>
             <artifactId>robolectric</artifactId>
             <version>2.3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.jakewharton</groupId>
-            <artifactId>butterknife</artifactId>
-            <version>4.0.1</version>
-        </dependency>
+
         <dependency>
             <groupId>com.squareup</groupId>
             <artifactId>fest-android</artifactId>
             <version>1.0.7</version>
+            <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <groupId>android</groupId>
+            <artifactId>android</artifactId>
+            <version>4.4.2_r2</version>
+            <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.android.support</groupId>
+            <artifactId>support-v4</artifactId>
+            <version>19.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.android.gms</groupId>
+            <artifactId>google-play-services</artifactId>
+            <version>15.0.0</version>
+            <type>apklib</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.android.gms</groupId>
+            <artifactId>google-play-services</artifactId>
+            <version>15.0.0</version>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mcxiaoke.volley</groupId>
+            <artifactId>library</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mapzen</groupId>
+            <artifactId>geojson</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.oscim</groupId>
+            <artifactId>vtm</artifactId>
+            <version>0.5.9-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.oscim</groupId>
+            <artifactId>vtm-android</artifactId>
+            <version>0.5.9-SNAPSHOT</version>
+            <type>aar</type>
+        </dependency>
+
         <dependency>
             <groupId>org.oscim</groupId>
             <artifactId>vtm-jni</artifactId>
@@ -98,6 +100,7 @@
             <classifier>armeabi</classifier>
             <type>so</type>
         </dependency>
+
         <dependency>
             <groupId>org.oscim</groupId>
             <artifactId>vtm-jni</artifactId>
@@ -105,6 +108,7 @@
             <classifier>armeabi-v7a</classifier>
             <type>so</type>
         </dependency>
+
         <dependency>
             <groupId>org.oscim</groupId>
             <artifactId>vtm-jni</artifactId>
@@ -112,6 +116,19 @@
             <classifier>x86</classifier>
             <type>so</type>
         </dependency>
+
+        <dependency>
+            <groupId>com.jakewharton</groupId>
+            <artifactId>butterknife</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.crashlytics.android</groupId>
             <artifactId>crashlytics</artifactId>
@@ -142,6 +159,10 @@
                     </sdk>
                 </configuration>
             </plugin>
+
+            <!-- TODO: checkstyle plugin-->
+            <!-- TODO: PMD plugin -->
+
         </plugins>
 
     </build>
