Adds jenkins profile to update manifest version name.

--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,31 @@
             <!-- TODO: PMD plugin -->
 
         </plugins>
-
     </build>
+
+    <profiles>
+        <profile>
+            <id>jenkins</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                        <artifactId>android-maven-plugin</artifactId>
+                        <configuration>
+                            <manifestVersionName>0.1-SNAPSHOT</manifestVersionName>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>manifest-update</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
