Initial attempt at PMD plugin config.
Currently failing with the following output:

[WARNING] Unable to locate Source XRef to link to - DISABLED
[INFO]
[INFO] >>> maven-pmd-plugin:3.0.1:check (default) @ mapzen >>>
[WARNING] The artifact org.apache.commons:commons-io:jar:1.3.2 has been relocated to commons-io:commons-io:jar:1.3.2
[INFO]
[INFO] --- maven-pmd-plugin:3.0.1:pmd (pmd) @ mapzen ---
[WARNING] Unable to locate Source XRef to link to - DISABLED
net.sourceforge.pmd.RuleSetNotFoundException: Can't find resource rulesets/unusedcode.xml.  Make sure the resource is a valid file or URL or is on the CLASSPATH.  Here's the current classpath: /opt/apache-maven-3.1.1/boot/plexus-classworlds-2.5.1.jar
	at net.sourceforge.pmd.RuleSetReferenceId.getInputStream(RuleSetReferenceId.java:254)
	at net.sourceforge.pmd.RuleSetFactory.createRuleSet(RuleSetFactory.java:161)
	at net.sourceforge.pmd.RuleSetFactory.createRule(RuleSetFactory.java:179)
	at net.sourceforge.pmd.RuleSetFactory.parseRuleReferenceNode(RuleSetFactory.java:448)
	at net.sourceforge.pmd.RuleSetFactory.parseRuleNode(RuleSetFactory.java:263)
	at net.sourceforge.pmd.RuleSetFactory.parseRuleSetNode(RuleSetFactory.java:216)
	at net.sourceforge.pmd.RuleSetFactory.createRuleSet(RuleSetFactory.java:161)
	at net.sourceforge.pmd.RuleSetFactory.createRuleSets(RuleSetFactory.java:126)
	at net.sourceforge.pmd.RuleSetFactory.createRuleSets(RuleSetFactory.java:111)
	at net.sourceforge.pmd.processor.AbstractPMDProcessor.createRuleSets(AbstractPMDProcessor.java:56)
	at net.sourceforge.pmd.processor.MonoThreadProcessor.processFiles(MonoThreadProcessor.java:41)
	at net.sourceforge.pmd.PMD.processFiles(PMD.java:271)
	at org.apache.maven.plugin.pmd.PmdReport.generateReport(PmdReport.java:296)
	at org.apache.maven.plugin.pmd.PmdReport.execute(PmdReport.java:194)
	at org.apache.maven.plugin.pmd.PmdReport.executeReport(PmdReport.java:168)
	at org.apache.maven.reporting.AbstractMavenReport.generate(AbstractMavenReport.java:190)
	at or

--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,27 @@
                 </executions>
             </plugin>
 
-            <!-- TODO: PMD plugin -->
+            <!-- TODO: Fix PMD -->
+            <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <rulesets>
+                        <ruleset>${basedir}/cq-configs/pmd/pmd-ruleset.xml</ruleset>
+                    </rulesets>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
 
         </plugins>
     </build>
