--- a/pom.xml
+++ b/pom.xml
@@ -211,15 +211,14 @@
                 </executions>
             </plugin>
 
-            <!-- TODO: Fix PMD -->
-            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.0.1</version>
                 <configuration>
+                    <verbose>true</verbose>
                     <rulesets>
-                        <ruleset>${basedir}/cq-configs/pmd/pmd-ruleset.xml</ruleset>
+                        <ruleset>rulesets/java/unusedcode.xml</ruleset>
                     </rulesets>
                 </configuration>
                 <executions>
@@ -231,7 +230,6 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
 
         </plugins>
     </build>
