Fixes PMD path to rulesets (for real this time... I hope).

--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
                 <configuration>
                     <verbose>true</verbose>
                     <rulesets>
-                        <ruleset>rulesets/java/unusedcode.xml</ruleset>
+                        <ruleset>${basedir}/rulesets/java/unusedcode.xml</ruleset>
                     </rulesets>
                 </configuration>
                 <executions>
