--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
             <artifactId>crashlytics</artifactId>
             <version>[1.1.10,)</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mapzen.android</groupId>
+            <artifactId>speakerbox</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
