--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,13 @@
             <artifactId>speakerbox</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.samsung</groupId>
+            <artifactId>samsung-accessory</artifactId>
+            <version>1.0.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
