adds on the road library into the project

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
         <dependency>
             <groupId>com.mapzen</groupId>
             <artifactId>geojson</artifactId>
+            <version>0.2-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mapzen</groupId>
+            <artifactId>on-the-road</artifactId>
             <version>0.1-SNAPSHOT</version>
         </dependency>
 
