Adds s3-upload-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -302,13 +302,57 @@
                         <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                         <artifactId>android-maven-plugin</artifactId>
                         <configuration>
-                            <manifestVersionName>0.1-SNAPSHOT</manifestVersionName>
+                            <manifestVersionName>${project.version}</manifestVersionName>
                         </configuration>
                         <executions>
                             <execution>
                                 <phase>process-resources</phase>
                                 <goals>
                                     <goal>manifest-update</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                        <artifactId>android-maven-plugin</artifactId>
+                        <configuration>
+                            <manifestVersionName>${project.version}</manifestVersionName>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>manifest-update</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>com.bazaarvoice.maven.plugins</groupId>
+                        <artifactId>s3-upload-maven-plugin</artifactId>
+                        <version>1.2</version>
+                        <configuration>
+                            <bucketName>mapzen.android</bucketName>
+                            <source>target/${project.build.finalName}.apk</source>
+                            <destination>${project.build.finalName}.apk</destination>
+                            <accessKey>${s3.accessKey}</accessKey>
+                            <secretKey>${s3.secretKey}</secretKey>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>s3-upload</goal>
                                 </goals>
                             </execution>
                         </executions>
