--- a/pom.xml
+++ b/pom.xml
@@ -322,7 +322,7 @@
                         <artifactId>s3-upload-maven-plugin</artifactId>
                         <version>1.2</version>
                         <configuration>
-                            <bucketName>mapzen.android</bucketName>
+                            <bucketName>android.mapzen.com</bucketName>
                             <source>target/${project.build.finalName}.apk</source>
                             <destination>latest.apk</destination>
                             <accessKey>${s3.accessKey}</accessKey>
@@ -366,7 +366,7 @@
                         <artifactId>s3-upload-maven-plugin</artifactId>
                         <version>1.2</version>
                         <configuration>
-                            <bucketName>mapzen.android</bucketName>
+                            <bucketName>android.mapzen.com</bucketName>
                             <source>target/${project.build.finalName}.apk</source>
                             <destination>${project.build.finalName}.apk</destination>
                             <accessKey>${s3.accessKey}</accessKey>
