--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mapzen.android</groupId>
+            <artifactId>pelias-android-sdk</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.mapzen</groupId>
             <artifactId>on-the-road</artifactId>
             <version>0.1-SNAPSHOT</version>
