--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mapzen"
     android:versionCode="2"
-    android:versionName="0.1-DEVELOPMENT" >
+    android:versionName="0.1-DEVELOPMENT"
+    android:installLocation="preferExternal">
 
     <uses-sdk
         android:minSdkVersion="17"
