--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,12 @@
             <version>16.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mapzen.android</groupId>
+            <artifactId>player-services</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
