--- a/pom.xml
+++ b/pom.xml
@@ -83,9 +83,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mapzen</groupId>
+            <groupId>com.mapzen.android</groupId>
             <artifactId>on-the-road</artifactId>
-            <version>0.1</version>
+            <version>0.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
